--- a/wp-content/themes/affstream/styles/comment.scss
+++ b/wp-content/themes/affstream/styles/comment.scss
@@ -130,37 +130,87 @@
       line-height: normal;
     }
   }
-
-  .form-flex-container {
-    display: flex;
-    gap: 10px;
-    @include breakpoint(mobile){
-      flex-direction: column;
-    }
-    .comment-form {
-      width: 100%;
-      input {
+  .comment-form {
+    width: 100%;
+    .comment-form-author-email{
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
+      margin-bottom: 20px;
+      @include breakpoint(mobile){
+        flex-direction: column;
+        margin-bottom: 20px;
+      }
+      .comment-form-author, .comment-form-email{
+        max-width: 50%;
         width: 100%;
-        max-width: 93%;
-        display: block;
-        border-radius: 6.712px;
-        border: 1px solid #CAC9CD;
-        background: #FFF;
-        color: #959595;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        padding: 12px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 0;
+        @include breakpoint(mobile){
+          max-width: 100%;
+        }
+        input {
+          max-width: 100%;
+          display: block;
+          border-radius: 6.712px;
+          border: 1px solid #CAC9CD;
+          background: #FFF;
+          color: #959595;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          padding: 12px;
+          @include breakpoint(mobile){
+            margin-bottom: 0;
+          }
 
+        }
       }
     }
+    .rating-container{
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-row-gap: 20px;
+      grid-column-gap: 20px;
+      margin-bottom: 25px;
+      .comment-form-rating{
+        display: flex;
+        align-items: start;
+        gap: 20px;
+        width: fit-content;
+        @include breakpoint(mobile){
+          flex-direction: column;
+          gap: 9px;
+        }
+        .rating-name{
+          color: #100F0F;
+          font-size: 22px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+          margin-bottom: 0;
+        }
+        .form-rating-item{
+          .star{
+            &.active{
+              svg{
+                path{
+                  fill: #0C62FD;
+                }
+              }
+            }
+          }
 
+        }
+      }
+    }
   }
 
   .comment-form-comment {
     width: 100%;
-
     textarea {
       box-sizing: border-box;
       width: 100%;
