--- a/wp-content/themes/affstream/blocks/affstream-services/style.css
+++ b/wp-content/themes/affstream/blocks/affstream-services/style.css
@@ -33,12 +33,24 @@
   }
 }
 .affstream-services .field-title {
-  grid-template-columns: 200px 40% auto 70px 10%;
+  grid-template-columns: 200px 40% auto;
   display: grid;
-  padding: 10px 40px;
-  grid-column-gap: 20px;
+  padding: 10px 56px 16px;
+  grid-column-gap: 40px;
 }
-@media (max-width: 767px) {
+@media (max-width: 1599px) {
+  .affstream-services .field-title {
+    grid-column-gap: 20px;
+    padding: 10px 40px 16px;
+    grid-template-columns: 200px 45% auto;
+  }
+}
+@media (max-width: 1400px) {
+  .affstream-services .field-title {
+    grid-template-columns: 200px 40% auto 70px 10%;
+  }
+}
+@media (max-width: 1023px) {
   .affstream-services .field-title {
     display: none;
   }
@@ -51,6 +63,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  margin-bottom: 0;
 }
 .affstream-services .affstream-services-container {
   padding-bottom: 30px;
@@ -65,6 +78,8 @@
   background: #FFF;
   position: relative;
   display: block;
+  transition: all 0.3s linear;
+  text-decoration: none;
 }
 .affstream-services .affstream-services-container .service-card:hover .single-page-link {
   transform: translateX(10px);
@@ -143,6 +158,9 @@
     gap: 20px;
   }
 }
+.affstream-services .affstream-services-container .service-card.top_card:hover {
+  box-shadow: 0px 0px 8px 0px rgba(12, 98, 253, 0.8);
+}
 @media (max-width: 1400px) {
   .affstream-services .affstream-services-container .service-card.top_card .card-container {
     grid-template-columns: 200px 40% auto 70px 10%;
@@ -211,21 +229,33 @@
 }
 .affstream-services .affstream-services-container .service-card .card-container .service-icon img {
   width: fit-content;
+  margin: auto;
 }
 .affstream-services .affstream-services-container .service-card .card-container .service-icon .container {
-  display: flex;
+  display: block;
   width: 100%;
   margin: 0;
   padding: 0;
+}
+@media (max-width: 767px) {
+  .affstream-services .affstream-services-container .service-card .card-container .service-icon .container {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .affstream-services .affstream-services-container .service-card .card-container .service-icon .is-top-mobile {
   display: none;
 }
 @media (max-width: 1023px) {
   .affstream-services .affstream-services-container .service-card .card-container .service-icon .is-top-mobile {
-    display: block;
+    display: none;
     font-size: 18px;
     padding: 7px;
+  }
+}
+@media (max-width: 767px) {
+  .affstream-services .affstream-services-container .service-card .card-container .service-icon .is-top-mobile {
+    display: block;
   }
 }
 .affstream-services .affstream-services-container .service-card .card-container .service-description p {
