--- a/wp-content/themes/affstream/blocks/affstream-services/style.scss
+++ b/wp-content/themes/affstream/blocks/affstream-services/style.scss
@@ -61,11 +61,19 @@
   }
 
   .field-title {
-    grid-template-columns: 200px 40% auto 70px 10%;
+    grid-template-columns: 200px 40% auto;
     display: grid;
-    padding: 10px 40px;
-    grid-column-gap: 20px;
-    @include breakpoint(mobile) {
+    padding: 10px 56px  16px;
+    grid-column-gap: 40px;
+    @include breakpoint(desktop){
+      grid-column-gap: 20px;
+      padding: 10px 40px  16px;
+      grid-template-columns: 200px 45% auto ;
+    }
+    @media (max-width: 1400px) {
+      grid-template-columns: 200px 40% auto 70px 10%;
+    }
+    @include breakpoint(tablet) {
       display: none;
     }
     .column-name {
@@ -76,6 +84,7 @@
       font-style: normal;
       font-weight: 700;
       line-height: normal;
+      margin-bottom: 0;
     }
   }
 
@@ -95,9 +104,10 @@
       background: #FFF;
       position: relative;
       display: block;
-
-
+      transition: all 0.3s linear;
+      text-decoration: none;
       &:hover{
+
         .single-page-link{
           transform: translateX(10px);
           svg{
@@ -158,6 +168,7 @@
         z-index: 1;
         top: 50%;
         transform: translate(-100%, -50%);
+
         @media (max-width: 1400px) {
           display: none;
         }
@@ -172,6 +183,9 @@
         gap: 20px;
       }
       &.top_card{
+        &:hover{
+          box-shadow: 0px 0px 8px 0px rgba(12, 98, 253, 0.80);
+        }
         .card-container{
           @media (max-width: 1400px) {
             grid-template-columns: 200px 40% auto 70px 10%;
@@ -199,13 +213,11 @@
         box-shadow: 0px 0px 7.89547px 0px rgba(0, 0, 0, 0.25);
         border-radius: 10px;
         overflow: hidden;
-
         @include breakpoint(desktop) {
           padding: 25px;
           grid-template-columns: 200px 45% auto 120px;
           grid-column-gap: 20px;
         }
-
         @include breakpoint(tablet) {
           grid-template-columns: 1fr 1fr;
           grid-row-gap: 20px;
@@ -230,25 +242,35 @@
           }
           img {
             width: fit-content;
+            margin: auto;
           }
           .container{
-            display: flex;
+            display: block;
             width: 100%;
             margin: 0;
             padding: 0;
+            @include breakpoint(mobile){
+              display: flex;
+              justify-content: space-between;
+            }
           }
           .is-top-mobile{
             display: none;
             @include breakpoint(tablet){
-              display: block;
+              display: none;
               font-size: 18px;
               padding: 7px;
+            }
+            @include breakpoint(mobile){
+              display: block;
             }
           }
         }
 
         .service-description {
+
           p {
+
             color: #100F0F;
             leading-trim: both;
             text-edge: cap;
