--- a/wp-content/themes/affstream/styles/media.css
+++ b/wp-content/themes/affstream/styles/media.css
@@ -857,4 +857,338 @@ body.page-template-media.custom-background {
   }
 }
 
+.tax-service-category .field-title {
+  grid-template-columns: 200px 40% auto;
+  display: grid;
+  padding: 10px 40px 16px;
+  grid-column-gap: 40px;
+}
+@media (max-width: 1599px) {
+  .tax-service-category .field-title {
+    grid-column-gap: 20px;
+    padding: 10px 25px 16px;
+    grid-template-columns: 200px 45% auto;
+  }
+}
+@media (max-width: 1400px) {
+  .tax-service-category .field-title {
+    grid-template-columns: 200px 40% auto 70px 10%;
+  }
+}
+@media (max-width: 1023px) {
+  .tax-service-category .field-title {
+    display: none;
+  }
+}
+.tax-service-category .field-title .column-name {
+  color: #100F0F;
+  leading-trim: both;
+  text-edge: cap;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 0;
+}
+.tax-service-category .affstream-services {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+@media (max-width: 1599px) {
+  .tax-service-category .affstream-services {
+    max-width: 1200px;
+    padding: 0 16px;
+  }
+}
+.tax-service-category .affstream-services .service-card {
+  border-radius: 10px;
+  background: #FFF;
+  margin-bottom: 20px;
+  align-items: center;
+  border-radius: 10px;
+  background: #FFF;
+  position: relative;
+  display: block;
+  transition: all 0.3s linear;
+}
+.tax-service-category .affstream-services .service-card:hover .single-page-link {
+  transform: translateX(10px);
+}
+.tax-service-category .affstream-services .service-card:hover .single-page-link svg circle {
+  fill: black;
+}
+.tax-service-category .affstream-services .service-card .single-page-link {
+  transition: all 0.3s linear;
+  padding-right: 30px;
+}
+@media (max-width: 1599px) {
+  .tax-service-category .affstream-services .service-card .single-page-link {
+    margin-left: auto;
+  }
+  .tax-service-category .affstream-services .service-card .single-page-link svg {
+    width: 50px;
+    height: 50px;
+  }
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card .single-page-link {
+    display: none;
+  }
+}
+.tax-service-category .affstream-services .service-card:last-child {
+  margin-bottom: 0;
+}
+.tax-service-category .affstream-services .service-card .top-style {
+  display: flex;
+  align-items: center;
+  color: #FFF;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 25px;
+  font-style: italic;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: uppercase;
+  padding: 10px;
+  height: fit-content;
+}
+.tax-service-category .affstream-services .service-card .from-ukraine {
+  height: 80px;
+  border: 3px solid #FFD700;
+  border-radius: 8px;
+  display: flex;
+  width: 100%;
+  max-width: 100%;
+  padding: 10px;
+  justify-content: space-between;
+}
+.tax-service-category .affstream-services .service-card .is-top {
+  position: absolute;
+  left: -10px;
+  bottom: 0;
+  z-index: 1;
+  top: 50%;
+  transform: translate(-100%, -50%);
+}
+@media (max-width: 1400px) {
+  .tax-service-category .affstream-services .service-card .is-top {
+    display: none;
+  }
+}
+@media (max-width: 1023px) {
+  .tax-service-category .affstream-services .service-card {
+    grid-template-columns: 150px 1fr 200px auto;
+    gap: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+}
+.tax-service-category .affstream-services .service-card.top_card:hover {
+  box-shadow: 0px 0px 8px 0px rgba(12, 98, 253, 0.8);
+}
+@media (max-width: 1400px) {
+  .tax-service-category .affstream-services .service-card.top_card .card-container {
+    grid-template-columns: 200px 40% auto 70px 10%;
+  }
+}
+@media (max-width: 1023px) {
+  .tax-service-category .affstream-services .service-card.top_card .card-container {
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card.top_card .card-container {
+    grid-template-columns: 1fr;
+    padding: 20px 15px;
+  }
+}
+.tax-service-category .affstream-services .service-card .card-container {
+  display: grid;
+  grid-template-columns: 200px 40% auto auto;
+  grid-column-gap: 40px;
+  position: relative;
+  background: #FFFFFF;
+  z-index: 22;
+  align-items: center;
+  padding: 40px;
+  box-shadow: 0px 0px 7.89547px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  overflow: hidden;
+}
+@media (max-width: 1599px) {
+  .tax-service-category .affstream-services .service-card .card-container {
+    padding: 25px;
+    grid-template-columns: 200px 45% auto 120px;
+    grid-column-gap: 20px;
+  }
+}
+@media (max-width: 1023px) {
+  .tax-service-category .affstream-services .service-card .card-container {
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card .card-container {
+    grid-template-columns: 1fr;
+    padding: 20px 15px;
+  }
+}
+@media (min-width: 1400px) {
+  .tax-service-category .affstream-services .service-card .card-container .is-top-inner {
+    display: none;
+  }
+}
+@media (max-width: 1023px) {
+  .tax-service-category .affstream-services .service-card .card-container .is-top-inner {
+    display: none;
+  }
+}
+@media (max-width: 1023px) {
+  .tax-service-category .affstream-services .service-card .card-container .service-icon {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+.tax-service-category .affstream-services .service-card .card-container .service-icon img {
+  width: fit-content;
+  margin: auto;
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card .card-container .service-icon img {
+    max-width: 200px;
+  }
+}
+.tax-service-category .affstream-services .service-card .card-container .service-icon .container {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card .card-container .service-icon .container {
+    display: flex;
+    justify-content: space-between;
+    grid-column-gap: 20px;
+  }
+}
+.tax-service-category .affstream-services .service-card .card-container .service-icon .is-top-mobile {
+  display: none;
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card .card-container .service-icon .is-top-mobile {
+    display: block;
+    font-size: 18px;
+    padding: 7px;
+  }
+}
+.tax-service-category .affstream-services .service-card .card-container .service-description p {
+  color: #100F0F;
+  leading-trim: both;
+  text-edge: cap;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 0;
+}
+@media (max-width: 1599px) {
+  .tax-service-category .affstream-services .service-card .card-container .service-description p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1023px) {
+  .tax-service-category .affstream-services .service-card .card-container .service-description p {
+    font-size: 14px;
+  }
+}
+.tax-service-category .affstream-services .service-card .card-container .monthly-price p {
+  color: #0C62FD;
+  leading-trim: both;
+  text-edge: cap;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 0;
+}
+@media (max-width: 1023px) {
+  .tax-service-category .affstream-services .service-card .card-container .monthly-price p {
+    font-size: 14px;
+  }
+}
+.tax-service-category .affstream-services .service-card .card-container .page-link a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5.5px;
+  font-size: 13.751px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1;
+  /* 12.538px */
+  text-transform: uppercase;
+  padding: 8px 10px;
+  border-radius: 55.004px;
+  border: 1.5px solid var(--2, #0C62FD);
+}
+@media (max-width: 1599px) {
+  .tax-service-category .affstream-services .service-card .card-container .page-link a {
+    font-size: 12px;
+  }
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card .card-container .page-link a {
+    width: fit-content;
+  }
+}
+.tax-service-category .affstream-services .service-card .card-container .links {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card .card-container .links {
+    flex-direction: row;
+    gap: 20px;
+  }
+}
+.tax-service-category .affstream-services .service-card .card-container .links .page-link {
+  width: fit-content;
+  display: flex;
+  gap: 5.5px;
+  font-size: 13.751px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 91.182%;
+  text-transform: uppercase;
+  padding: 8px 10px;
+  border-radius: 55.004px;
+  color: #0C62FD;
+  border: 1.5px solid #0C62FD;
+  transition: all 0.2s ease-in;
+}
+.tax-service-category .affstream-services .service-card .card-container .links .page-link svg {
+  transition: all 0.2s ease-in;
+}
+.tax-service-category .affstream-services .service-card .card-container .links .page-link:hover {
+  background: #0C62FD;
+  color: #fff;
+}
+.tax-service-category .affstream-services .service-card .card-container .links .page-link:hover svg path {
+  fill: #fff;
+}
+@media (max-width: 767px) {
+  .tax-service-category .affstream-services .service-card .card-container .links .page-link {
+    width: fit-content;
+  }
+}
+
 /*# sourceMappingURL=media.css.map */
