--- a/wp-content/themes/affstream/styles/media.scss
+++ b/wp-content/themes/affstream/styles/media.scss
@@ -875,5 +875,322 @@ body.page-template-media.custom-background {
 
 }
 
+.tax-service-category{
+  .field-title {
+    grid-template-columns: 200px 40% auto;
+    display: grid;
+    padding: 10px 40px  16px;
+    grid-column-gap: 40px;
+    @include breakpoint(desktop){
+      grid-column-gap: 20px;
+      padding: 10px 25px  16px;
+      grid-template-columns: 200px 45% auto ;
+    }
+    @media (max-width: 1400px) {
+      grid-template-columns: 200px 40% auto 70px 10%;
+    }
+    @include breakpoint(tablet) {
+      display: none;
+    }
+    .column-name {
+      color: #100F0F;
+      leading-trim: both;
+      text-edge: cap;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      margin-bottom: 0;
+    }
+  }
+  .affstream-services{
+    max-width: 1300px;
+    margin: 0 auto;
+    @include breakpoint(desktop){
+      max-width: 1200px;
+      padding: 0 16px;
+    }
+    .service-card {
+      border-radius: 10px;
+      background: #FFF;
+      margin-bottom: 20px;
+      align-items: center;
+      border-radius: 10px;
+      background: #FFF;
+      position: relative;
+      display: block;
+      transition: all 0.3s linear;
+      &:hover{
 
+        .single-page-link{
+          transform: translateX(10px);
+          svg{
+            circle{
+              fill: black;
+            }
+          }
+        }
+      }
+      .single-page-link{
+        transition: all 0.3s linear;
+        padding-right: 30px;
+        @include breakpoint(desktop){
+          margin-left: auto;
+          svg{
+            width: 50px;
+            height: 50px;
+          }
+        }
+        @include breakpoint(mobile){
+          display: none;
+        }
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+      .top-style{
+        display: flex;
+        align-items: center;
+        color: #FFF;
+        leading-trim: both;
+        text-edge: cap;
+        font-family: "SF Pro Display", sans-serif;
+        font-size: 25px;
+        font-style: italic;
+        font-weight: 900;
+        line-height: normal;
+        text-transform: uppercase;
+        padding: 10px;
+        height: fit-content;
+      }
+      .from-ukraine{
+        height: 80px;
+        border: 3px solid #FFD700;
+        border-radius: 8px;
+        display: flex;
+        width: 100%;
+        max-width: 100%;
+        padding: 10px;
+        justify-content: space-between;
+
+      }
+      .is-top {
+        position: absolute;
+        left: -10px;
+        bottom: 0;
+        z-index: 1;
+        top: 50%;
+        transform: translate(-100%, -50%);
+        @media (max-width: 1400px) {
+          display: none;
+        }
+      }
+
+      @include breakpoint(tablet) {
+        grid-template-columns: 150px 1fr 200px auto;
+        gap: 20px;
+      }
+      @include breakpoint(mobile) {
+        grid-template-columns: 1fr;
+        gap: 20px;
+      }
+      &.top_card{
+        &:hover{
+          box-shadow: 0px 0px 8px 0px rgba(12, 98, 253, 0.80);
+        }
+        .card-container{
+          @media (max-width: 1400px) {
+            grid-template-columns: 200px 40% auto 70px 10%;
+          }
+          @include breakpoint(tablet) {
+            grid-template-columns: 1fr 1fr;
+            grid-row-gap: 20px;
+          }
+          @include breakpoint(mobile) {
+            grid-template-columns: 1fr;
+            padding: 20px 15px;
+          }
+        }
+      }
+
+      .card-container {
+        display: grid;
+        grid-template-columns: 200px 40% auto auto;
+        grid-column-gap: 40px;
+        position: relative;
+        background: #FFFFFF;
+        z-index: 22;
+        align-items: center;
+        padding: 40px;
+        box-shadow: 0px 0px 7.89547px 0px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        overflow: hidden;
+
+        @include breakpoint(desktop) {
+          padding: 25px;
+          grid-template-columns: 200px 45% auto 120px;
+          grid-column-gap: 20px;
+        }
+
+        @include breakpoint(tablet) {
+          grid-template-columns: 1fr 1fr;
+          grid-row-gap: 20px;
+        }
+        @include breakpoint(mobile) {
+          grid-template-columns: 1fr;
+          padding: 20px 15px;
+        }
+        .is-top-inner{
+          @media (min-width: 1400px) {
+            display: none;
+          }
+          @include breakpoint(tablet){
+            display: none;
+          }
+        }
+        .service-icon {
+          @include breakpoint(tablet){
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+          }
+          img {
+            width: fit-content;
+            margin: auto;
+            @include breakpoint(mobile){
+              max-width: 200px;
+            }
+          }
+          .container{
+            display: block;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            @include breakpoint(mobile){
+              display: flex;
+              justify-content: space-between;
+              grid-column-gap: 20px;
+            }
+          }
+          .is-top-mobile{
+            display: none;
+
+            @include breakpoint(mobile){
+              display: block;
+              font-size: 18px;
+              padding: 7px;
+            }
+          }
+        }
+
+        .service-description {
+          p {
+            color: #100F0F;
+            leading-trim: both;
+            text-edge: cap;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            margin-bottom: 0;
+            @include breakpoint(desktop) {
+              font-size: 18px;
+            }
+            @include breakpoint(tablet) {
+              font-size: 14px;
+            }
+          }
+        }
+
+        .monthly-price {
+          p {
+            color: #0C62FD;
+            leading-trim: both;
+            text-edge: cap;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+            margin-bottom: 0;
+            @include breakpoint(tablet) {
+              font-size: 14px;
+            }
+          }
+        }
+
+        .page-link {
+          a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 5.5px;
+            font-size: 13.751px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 1; /* 12.538px */
+            text-transform: uppercase;
+            padding: 8px 10px;
+            border-radius: 55.004px;
+            border: 1.5px solid var(--2, #0C62FD);
+            @include breakpoint(desktop) {
+              font-size: 12px;
+            }
+            @include breakpoint(mobile) {
+              width: fit-content;
+
+            }
+          }
+        }
+
+        .links {
+          gap: 10px;
+          display: flex;
+          flex-direction: column;
+          @include breakpoint(mobile) {
+            flex-direction: row;
+            gap: 20px;
+          }
+
+          .page-link {
+            width: fit-content;
+            display: flex;
+            gap: 5.5px;
+            font-size: 13.751px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 91.182%;
+            text-transform: uppercase;
+            padding: 8px 10px;
+            border-radius: 55.004px;
+            color: #0C62FD;
+            border: 1.5px solid #0C62FD;
+            transition: all 0.2s ease-in;
+
+            svg {
+              transition: all 0.2s ease-in;
+            }
+
+            &:hover {
+              background: #0C62FD;
+              color: #fff;
+
+              svg {
+                path {
+                  fill: #fff;
+                }
+              }
+            }
+
+            @include breakpoint(mobile) {
+              width: fit-content;
+            }
+          }
+        }
+
+      }
+    }
+  }
+
+}
 
