--- a/wp-content/themes/affstream/styles/single-page-services.scss
+++ b/wp-content/themes/affstream/styles/single-page-services.scss
@@ -5,7 +5,9 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
-
+    @include breakpoint(mobile){
+      gap: 20px;
+    }
     .name-container {
       display: flex;
       flex-direction: column;
@@ -110,7 +112,9 @@
           font-size: 20px;
         }
       }
-
+      &:last-child{
+        margin-bottom: 0;
+      }
       p {
         color: #0C62FD;
         font-family: "SF Pro Display", sans-serif;
@@ -118,8 +122,12 @@
         font-style: normal;
         font-weight: 400;
         line-height: normal;
+        margin-bottom: 15px;
         @include breakpoint(desktop){
           font-size: 18px;
+        }
+        &:last-child{
+          margin-bottom: 0;
         }
         strong {
           color: #100F0F;
